Some changes in pom.xml, java version to 11